docs: add documentation for Show Opening
